documentation and some refactore to better structure
