# staticfiles/swagger.json
@@ -379,19 +379,103 @@
                 },
                 "invite_link": {
                   "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+     "/update-channel-inf/{channelId}/":{
+      "put": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "update channel information",
+        "operationId": "updateChannelInformation",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "channelId",
+            "required": true,
+            "type": "integer"
+          },
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
                 },
-                "subscribers": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "username": {
-                        "type": "string"
-                      },
-                      "email": {
-                        "type": "string"
-                      }
-                    }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/user/channels/": {
+      "get": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "get all user channels",
+        "operationId": "userChannels",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer"
+                  },
+                  "name": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  },
+                  "invite_link": {
+                    "type": "string"
+                  },
+                  "user_role": {
+                    "type": "string"
                   }
                 }
               }
@@ -406,7 +490,8 @@
         }
       }
     },
-    "/channel-message/{channelId}/{messageId}": {
+   
+    "/channel-message/{channelId}/{messageId}/": {
       "put": {
         "tags": [
           "Channel-Message"
@@ -977,7 +1062,7 @@
           }
         }
       },
-      "post": {
+      "delete": {
         "tags": [
           "Channel"
         ],
